# unicode-categories

./: Cargo.toml  README.md  search-index.js
implementors/unicode_categories/: trait.UnicodeCategories.js
scripts/: unicode.py
src/: lib.rs  tables.rs
src/unicode_categories/: lib.rs.html
unicode_categories/: index.html  trait.UnicodeCategories.html
