[package]
name = "unicode_categories"
version = "0.1.0"
authors = ["swgillespie <sean.william.g@gmail.com>"]
description = "Query Unicode category membership for chars"
keywords = ["unicode"]
license = "MIT",
repository = "https://github.com/swgillespie/unicode-categories"
documentation = "http://swgillespie.github.io/unicode-categories/unicode_categories/"
readme = "README.md"
